Reapply "Add SIMD distance kernels via Java Vector API (jdk.incubator.vector)"
This reverts commit a97cce52b8528edb274c5543320e0ef02d06c9c1.